--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+ProjectData/pythonEnv/*
 build/
 develop-eggs/
 dist/
@@ -131,3 +132,4 @@ dmypy.json
 
 #archivos generados
 DataSets/
+.Rproj.user
